--- a/ownCloudExtApp/Info.plist
+++ b/ownCloudExtApp/Info.plist
@@ -27,14 +27,16 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>UIDocumentPickerModes</key>
-			<array/>
+			<array>
+				<string>UIDocumentPickerModeOpen</string>
+			</array>
 			<key>UIDocumentPickerSupportedFileTypes</key>
 			<array>
 				<string>public.content</string>
 			</array>
 		</dict>
-		<key>NSExtensionMainStoryboard</key>
-		<string>MainInterface</string>
+		<key>NSExtensionPrincipalClass</key>
+		<string>DocumentPickerViewController</string>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.fileprovider-ui</string>
 	</dict>
