Leave the gitmodules with ssh access and handle manually the submodules in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,10 @@ xcode_project: Owncloud iOs Client.xcodeproj
 xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
 
+git:
+    submodules: false
+
 before_install:
   - brew update
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - git submodule update --init --recursive
