--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "OCCommunicationLib"]
 	path = OCCommunicationLib
-	url = git@github.com:owncloud/ios-library.git
+	url = https://github.com/owncloud/ios-library.git
