--- a/.tx/config
+++ b/.tx/config
@@ -1,7 +1,7 @@
 [main]
 host = https://www.transifex.com
 
-[mobil-ios-app.localizablestrings]
+[owncloud.mobile-ios]
 file_filter = Owncloud iOs Client/SupportingFiles/Languages/<lang>.lproj/Localizable.strings
 source_file = Owncloud iOs Client/SupportingFiles/Languages/en.lproj/Localizable.strings
 source_lang = en
