Resolved the bug related with the name of the files sent to the document provider, refactor the code of the openfile method and put a control to check if the process is ok

--- a/Owncloud iOs Client.xcodeproj/xcshareddata/xcschemes/ownCloudExtApp.xcscheme
+++ b/Owncloud iOs Client.xcodeproj/xcshareddata/xcschemes/ownCloudExtApp.xcscheme
@@ -58,12 +58,17 @@
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
+      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <IDERemoteRunnable
+         RemotePath = "/var/mobile/Containers/Bundle/Application/AD91BEBE-7611-4589-809F-0F4697C2BCCA/Documents.app"
+         BundleIdentifier = "/var/mobile/Containers/Bundle/Application/AD91BEBE-7611-4589-809F-0F4697C2BCCA/Documents.app">
+      </IDERemoteRunnable>
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1324297715ADBB3700DF823E"
@@ -71,7 +76,7 @@
             BlueprintName = "Owncloud iOs Client"
             ReferencedContainer = "container:Owncloud iOs Client.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
