--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "OCCommunicationLib"]
 	path = OCCommunicationLib
 	url = https://github.com/owncloud/ios-library.git
+[submodule "ocdoc"]
+	path = user_manual/ocdoc
+	url = https://github.com/owncloud/documentation
+	branch = master
