Add ocdoc submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,6 @@
 	path = OCCommunicationLib
 	url = https://github.com/owncloud/ios-library.git
 [submodule "ocdoc"]
-	path = user_manual/ocdoc
+	path = ocdoc
 	url = https://github.com/owncloud/documentation
 	branch = master
