Added Import option to the Document Provider

--- a/ownCloudExtApp/Info.plist
+++ b/ownCloudExtApp/Info.plist
@@ -29,6 +29,7 @@
 			<key>UIDocumentPickerModes</key>
 			<array>
 				<string>UIDocumentPickerModeOpen</string>
+				<string>UIDocumentPickerModeImport</string>
 			</array>
 			<key>UIDocumentPickerSupportedFileTypes</key>
 			<array>
