--- a/Owncloud iOs Client/Owncloud iOs Client-Info.plist
+++ b/Owncloud iOs Client/Owncloud iOs Client-Info.plist
@@ -59,7 +59,7 @@
 		<string>Default-Landscape_414h@3x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.owncloud.iOSmobileapp</string>
+	<string>com.wsacad.IOSmobileapp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
