--- a/Owncloud iOs Client.xcodeproj/xcshareddata/xcschemes/ownCloudExtAppFileProvider.xcscheme
+++ b/Owncloud iOs Client.xcodeproj/xcshareddata/xcschemes/ownCloudExtAppFileProvider.xcscheme
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0610"
+   LastUpgradeVersion = "0630"
    wasCreatedForAppExtension = "YES"
-   version = "1.3">
+   version = "2.0">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -58,16 +58,12 @@
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
-      askForAppToLaunch = "Yes"
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
-      allowLocationSimulation = "YES">
-      <IDERemoteRunnable
-         RemotePath = "/var/mobile/Containers/Bundle/Application/7DD9596B-1381-4F88-9F5C-A130B17DEEF6/Documents.app"
-         BundleIdentifier = "/var/mobile/Containers/Bundle/Application/7DD9596B-1381-4F88-9F5C-A130B17DEEF6/Documents.app">
-      </IDERemoteRunnable>
+      allowLocationSimulation = "YES"
+      launchAutomaticallySubstyle = "2">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -79,6 +75,10 @@
       </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
+      <IDERemoteRunnable
+         RemotePath = "/var/mobile/Containers/Bundle/Application/7DD9596B-1381-4F88-9F5C-A130B17DEEF6/Documents.app"
+         BundleIdentifier = "/var/mobile/Containers/Bundle/Application/7DD9596B-1381-4F88-9F5C-A130B17DEEF6/Documents.app">
+      </IDERemoteRunnable>
    </LaunchAction>
    <ProfileAction
       shouldUseLaunchSchemeArgsEnv = "YES"
@@ -86,8 +86,9 @@
       useCustomWorkingDirectory = "NO"
       buildConfiguration = "Release"
       debugDocumentVersioning = "YES"
-      askForAppToLaunch = "Yes">
-      <BuildableProductRunnable>
+      launchAutomaticallySubstyle = "2">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1324297715ADBB3700DF823E"
