Add support for move and export in Document Provider, and add the interface to select folder

--- a/ownCloudExtApp/Info.plist
+++ b/ownCloudExtApp/Info.plist
@@ -30,6 +30,8 @@
 			<array>
 				<string>UIDocumentPickerModeOpen</string>
 				<string>UIDocumentPickerModeImport</string>
+				<string>UIDocumentPickerModeMoveToService</string>
+				<string>UIDocumentPickerModeExportToService</string>
 			</array>
 			<key>UIDocumentPickerSupportedFileTypes</key>
 			<array>
