Fixed a problem about execute all the test twice

--- a/automation_Test/config.ini
+++ b/automation_Test/config.ini
@@ -9,4 +9,4 @@ verbosity = 2
 #Used to display print statements on console
 nocapture = 1
 #test only some modules with comma seperated values
-tests = login_test.py,
+tests = login.py,
