--- a/automation_Test/config.ini
+++ b/automation_Test/config.ini
@@ -1,7 +1,7 @@
 #!/usr/bin/env python
-#author : oc
+#author : ownCloud, Inc.
 #description: description
-#copyright : Copyright 2015,
+#copyright :Copyright (C) 2015, ownCloud, Inc. This code is covered by the GNU Public License Version 3. For distribution utilizing Apple mechanisms please see https://owncloud.org/contribute/iOS-license-exception/ You should have received a copy of this license along with this program. If not, see <http://www.gnu.org/licenses/gpl-3.0.en.html>.
 #version 1.0
 
 [nosetests]
@@ -9,4 +9,4 @@ verbosity = 2
 #Used to display print statements on console
 nocapture = 1
 #test only some modules with comma seperated values
-tests = login.py,
+tests = loginTest.py,
