Fixed the problem on the Document Provider about access to SSL self signed servers

--- a/ownCloudExtApp/Info.plist
+++ b/ownCloudExtApp/Info.plist
@@ -43,5 +43,12 @@
 		<key>NSExtensionPrincipalClass</key>
 		<string>DocumentPickerViewController</string>
 	</dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict/>
+	</dict>
 </dict>
 </plist>
