Fixed the problem about connect with SSL self signed on Share In

--- a/OC Share Sheet/Info.plist
+++ b/OC Share Sheet/Info.plist
@@ -47,5 +47,12 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.share-services</string>
 	</dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict/>
+	</dict>
 </dict>
 </plist>
