Added xcsharedata to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ DerivedData
 *.hmap
 *.xccheckout
 *.pyc
-"Owncloud iOs Client.xcodeproj/project.xcworkspace/xcshareddata/"
+xcshareddata/
 
 #CocoaPods
 Pods
