Add the specific icon for the ipad pro

--- a/Owncloud iOs Client/Owncloud iOs Client-Info.plist
+++ b/Owncloud iOs Client/Owncloud iOs Client-Info.plist
@@ -50,6 +50,7 @@
 		<string>MainAppIcon_60-60@3x.png</string>
 		<string>MainAppIcon_76-76.png</string>
 		<string>MainAppIcon_76-76@2x.png</string>
+		<string>MainAppIcon_167-167.png</string>
 		<string>Default.png</string>
 		<string>Default@2x.png</string>
 		<string>Default-568h@2x.png</string>
