--- a/OC Share Sheet/OC Share Sheet.entitlements
+++ b/OC Share Sheet/OC Share Sheet.entitlements
@@ -4,11 +4,11 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.owncloud.iOSmobileapp</string>
+		<string>group.com.netcast.ncstore.ios</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)group.com.owncloud.iOSmobileapp</string>
+		<string>$(AppIdentifierPrefix)group.com.netcast.ncstore.ios</string>
 	</array>
 </dict>
 </plist>
