--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ xcode_sdk: iphonesimulator
 
 before_install:
   - brew update; brew update
+  - chmod +x automation_Test/loginTest.py
 
 addons:
 sauce_connect: true
 
 script:
-- "automation_Test/loginTest.py"
+- automation_Test/loginTest.py
