--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,18 @@ before_install:
 addons:
   sauce_connect: true
 
+language: python
+python:
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  # does not have headers provided, please ask https://launchpad.net/~pypy/+archive/ppa
+  # maintainers to fix their pypy-dev package.
+  - "pypy"
+# command to install dependencies
+install:
+  - pip install .
 script:
 - automation_Test/loginTest.py
