--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ xcode_sdk: iphonesimulator
 before_install:
   - brew update; brew update
   - chmod +x automation_Test/loginTest.py
+  - pip install Appium-Python-Client
 
 addons:
   sauce_connect: true
