--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
 
 before_install:
+  - pip install pytest
   - pip install Appium-Python-Client
   - brew update; brew update
   - chmod +x automation_Test/loginTest.py
