--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ xcode_project: Owncloud iOs Client.xcodeproj
 xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
 
-before_install:
-  - pip install pytest
+before_script:
   - pip install Appium-Python-Client
   - brew update; brew update
   - chmod +x automation_Test/loginTest.py
@@ -16,4 +15,5 @@ addons:
   sauce_connect: true
 
 script:
+  - node node_modules/appium &
   - python automation_Test/loginTest.py
