--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
 
 before_script:
-  - pip install Appium-Python-Client
+  - npm install appium
+  - pip install pytest
   - brew update; brew update
   - chmod +x automation_Test/loginTest.py
 
