--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
 
 install:
+  - npm install appium
+  - pip install Appium-Python-Client
   - python setup.py install
 
 before_script:
-  - npm install appium
-  - pip install Appium-Python-Clien
   - brew update; brew update
   - chmod +x automation_Test/loginTest.py
 
