--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
 
 install:
-  - pip install appium
-  - python setup.py install
+  - npm install appium
 
 before_script:
   - brew update; brew update
@@ -18,5 +17,4 @@ addons:
   sauce_connect: true
 
 script:
-  - node node_modules/appium &
   - python automation_Test/loginTest.py
