changed installation of Appium

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ xcode_project: Owncloud iOs Client.xcodeproj
 xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
 
-before_install: export PATH=node_modules/.bin:$PATH
-
-install:
+before_install:
   - npm install appium
+  - export PATH=node_modules/.bin:$PATH
 
 before_script:
   - brew update; brew update
