--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,11 @@ osx_image: xcode7
 xcode_project: Owncloud iOs Client.xcodeproj
 xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
-  
-install: pip install Appium-Python-Client
 
+before_install:
+  - export PATH=node_modules/.bin:$PATH
+  - pip install appium
+  
 before_script:
   - brew update; brew update
   - chmod +x automation_Test/loginTest.py
