--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ xcode_sdk: iphonesimulator
 
 before_install:
   - export PATH=node_modules/.bin:$PATH
-  - npm install appium
+  - npm install -g appium
   
 before_script:
   - brew update; brew update
