--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,15 @@ osx_image: xcode7
 xcode_project: Owncloud iOs Client.xcodeproj
 xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
-
-before_install:
-  - export PATH=node_modules/.bin:$PATH
-  - npm install -g appium
-  
+    
 before_script:
-  - brew update; brew update
-  - chmod +x automation_Test/loginTest.py
+  - rm -rf node_modules
+  - npm install appium
+  - pip install pytest
 
 addons:
   sauce_connect: true
 
 script:
-  - appium &
+  - node node_modules/appium &
   - python automation_Test/loginTest.py
