--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
     
 install:
-  - easy_install pip
+  - sudo easy_install pip
   - npm install appium
   - pip install Appium-Python-Client
   
