--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ xcode_sdk: iphonesimulator
     
 install:
   - sudo easy_install pip
+  - sudo chown -R $USER /Library/Python/2.7/site-packages/pync
   - npm install appium
   - pip install Appium-Python-Client
   
