remove sudo from appium-client install

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ xcode_sdk: iphonesimulator
     
 install:
   - sudo easy_install pip
-  - sudo pip install Appium-Python-Client
+  - pip install Appium-Python-Client
   
 addons:
   sauce_connect: true
