--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
     
 install:
-  - PATH=$HOME/.local/bin:$PATH
   - sudo easy_install pip
-  - pip install Appium-Python-Client
+  - sudo pip install Appium-Python-Client
   
 addons:
   sauce_connect: true
