--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ xcode_sdk: iphonesimulator
 install:
   - sudo easy_install pip
   - sudo pip install Appium-Python-Client
-  - pip install nose
+  #pip install nose
 
 addons:
   sauce_connect: true
@@ -18,5 +18,6 @@ script:
   - xcodebuild -sdk iphonesimulator6.0 TARGETED_DEVICE_FAMILY=1
   - zip -r my_app.zip Owncloud\ iOS\ Client.app/
   - curl -u $SAUCE_USERNAME:$SAUCE_ACCESS_KEY -X POST "http://saucelabs.com/rest/v1/storage/$SAUCE_USERNAME/my_app.zip?overwrite=true" -H "Content-Type: application/octet-stream" --data-binary @my_app.zip
-  - node node_modules/appium &
-  - nosetests -c config.ini
+  - node node_modules/appium 
+  - python automation_Test/loginTest.py
+  #nosetests -c config.ini
