--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ addons:
   sauce_connect: true
 
 script:	
-  - xcodebuild -sdk iphonesimulator TARGETED_DEVICE_FAMILY=1
-  - zip -r my_app.zip 'build/Release-iphonesimulator/Owncloud iOS Client.app'
+  - xcodebuild -project 'Owncloud iOS Client/OwnCloud iOS Client.xcodeproj' -scheme 'OwnCloud iOS Client' -sdk iphonesimulator TARGETED_DEVICE_FAMILY=1
+  - zip -r my_app.zip 'build/release-iphonesimulator/Owncloud iOS Client.app'
   - curl -u $SAUCE_USERNAME:$SAUCE_ACCESS_KEY -X POST "http://saucelabs.com/rest/v1/storage/$SAUCE_USERNAME/my_app.zip?overwrite=true" -H "Content-Type: application/octet-stream" --data-binary @my_app.zip
   - node node_modules/appium 
   - python automation_Test/loginTest.py
