--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
   sauce_connect: true
 
 script:	
-  - xcodebuild -scheme 'Owncloud iOs Client' -sdk iphonesimulator
+  #xcodebuild -sdk iphonesimulator
   - zip -r my_app.zip -i build/release-iphonesimulator/Owncloud\ iOs\ Client.app
   - curl -u $SAUCE_USERNAME:$SAUCE_ACCESS_KEY -X POST "http://saucelabs.com/rest/v1/storage/$SAUCE_USERNAME/my_app.zip?overwrite=true" -H "Content-Type: application/octet-stream" --data-binary @my_app.zip
   - node node_modules/appium 
