--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ addons:
 before_script:	
 #  - xcodebuild -project 'Owncloud iOs Client.xcodeproj' -scheme 'Owncloud iOs Client' -sdk iphonesimulator -UseSanitizedBuildSystemEnvironment=YES -configuration Debug clean
   - xcodebuild -sdk iphonesimulator TARGETED_DEVICE_FAMILY=1 CODE_SIGNING_REQUIRED=NO -configuration Debug clean   
-  - ls -la
-  - ls build/ -la
-  - ls build/Owncloud iOs Client.build -la
-  - ls build/Debug-iphonesimulator -la
+  - ls
+  - ls build/
+  - ls build/Owncloud iOs Client.build
+  - ls build/Debug-iphonesimulator
   - zip
 #  - zip -r my_app.zip -i 'build/release-iphonesimulator/Owncloud iOs Client.app'
 #  - curl -u $SAUCE_USERNAME:$SAUCE_ACCESS_KEY -X POST "http://saucelabs.com/rest/v1/storage/$SAUCE_USERNAME/my_app.zip?overwrite=true" -H "Content-Type: application/octet-stream" --data-binary @my_app.zip
