Add key to indicate app uses non-exempt encryption

--- a/OC Share Sheet/Info.plist
+++ b/OC Share Sheet/Info.plist
@@ -54,5 +54,7 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.share-services</string>
 	</dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
