--- a/ownCloudExtApp/Info.plist
+++ b/ownCloudExtApp/Info.plist
@@ -61,5 +61,7 @@
 		<key>NSExtensionPrincipalClass</key>
 		<string>DocumentPickerViewController</string>
 	</dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
