--- a/ownCloudExtAppFileProvider/Info.plist
+++ b/ownCloudExtAppFileProvider/Info.plist
@@ -31,5 +31,7 @@
 		<key>NSExtensionPrincipalClass</key>
 		<string>FileProvider</string>
 	</dict>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
