Update .travis.yml and update library commit

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ language: objective-c
 osx_image: xcode8
 xcode_project: Owncloud iOs Client.xcodeproj
 xcode_scheme: Owncloud iOs Client
-xcode_sdk: iphonesimulator
+xcode_sdk: 
+
+script:
+- xcodebuild -project 'Owncloud iOs Client.xcodeproj' -scheme 'Owncloud iOs Client' -sdk iphonesimulator -UseSanitizedBuildSystemEnvironment=YES
+
 
 before_install:
   - brew update; brew update
