--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: objective-c
 osx_image: xcode8
 xcode_project: Owncloud iOs Client.xcodeproj
 xcode_scheme: Owncloud iOs Client
-xcode_sdk: 
+xcode_sdk: iphonesimulator
 
-script:
-- xcodebuild -project 'Owncloud iOs Client.xcodeproj' -scheme 'Owncloud iOs Client' -sdk iphonesimulator -UseSanitizedBuildSystemEnvironment=YES
+#script:
+#- xcodebuild -project 'Owncloud iOs Client.xcodeproj' -scheme 'Owncloud iOs Client' -sdk iphonesimulator -UseSanitizedBuildSystemEnvironment=YES
 
 
 before_install:
-  - brew update; brew update
+  - brew update;  brew update
