--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ xcode_project: Owncloud iOs Client.xcodeproj
 xcode_scheme: Owncloud iOs Client
 xcode_sdk: iphonesimulator
 
-#script:
-#- xcodebuild -project 'Owncloud iOs Client.xcodeproj' -scheme 'Owncloud iOs Client' -sdk iphonesimulator -UseSanitizedBuildSystemEnvironment=YES
+script:
+ - xcodebuild -project 'Owncloud iOs Client.xcodeproj' -scheme 'Owncloud iOs Client' -sdk iphonesimulator -UseSanitizedBuildSystemEnvironment=YES
 
 
 before_install:
-  - brew update
-  - brew outdated xctool || brew upgrade xctool
+  - brew update; brew update
+  #- brew outdated xctool || brew upgrade xctool
