--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ osx_image: xcode8
 xcode_sdk: iphonesimulator10.0
 
 script:
- - xcodebuild -project 'Owncloud iOs Client.xcodeproj' -scheme 'Owncloud iOs Client' -sdk iphonesimulator
+ - xcodebuild -project 'Owncloud iOs Client.xcodeproj' -scheme 'Owncloud iOs Client' -sdk iphonesimulator build | xcpretty -c
 #-UseSanitizedBuildSystemEnvironment=YES
 
 #before_install:
