--- a/ownCloudExtApp/Info.plist
+++ b/ownCloudExtApp/Info.plist
@@ -33,6 +33,8 @@
 	</dict>
 	<key>NSExtension</key>
 	<dict>
+		<key>NSExtensionFileProviderSupportsEnumeration</key>
+		<true/>
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>UIDocumentPickerModes</key>
