--- a/Owncloud iOs Client/Owncloud iOs Client.entitlements
+++ b/Owncloud iOs Client/Owncloud iOs Client.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:https://192.168.1.48/f/</string>
+		<string>applinks:pablos-mbp.solidgear.prv</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
