--- a/ownCloudExtApp/ownCloudExtApp.entitlements
+++ b/ownCloudExtApp/ownCloudExtApp.entitlements
@@ -3,9 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:pablos-mbp.solidgear.prv</string>
-	</array>
+	<array/>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.com.owncloud.iOSmobileapp</string>
