--- a/.drone.yml
+++ b/.drone.yml
@@ -95,4 +95,4 @@ pipeline:
     when:
       local: false
       event: [ push ]
-      status: [ success, failure ]
+      status: [ failure, changed ]
